--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,26 +2,30 @@
     General Styles
 */
 @import "./userProfile.scss";
+@import "./findAgent.scss";
+@import "./search.scss";
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css");
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .home {
-    background-image:url("../img/cities_tall.jpg");
+    background-image:url("../img/agentOffice3.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
 }
 
-.red{
-    color: red;
+.left-logo{
+    color: rgba(222,0,0,255);
 }
-
+/*
 .logo_tamano {
     height: 4rem;
     display: block;
     margin: auto;
 }
+*/
+
