--- a/src/styles/profileAgent.scss
+++ b/src/styles/profileAgent.scss
@@ -15,6 +15,7 @@
     background-clip: border-box;
     border: 0 solid rgba(0,0,0,.125);
     border-radius: .25rem;
+    height: 22rem;
 }
 
 .card-body {
@@ -32,9 +33,9 @@
     padding-right: 8px;
     padding-left: 8px;
 }
-// .mb-3, .my-3 {
-//     margin-bottom: 1rem!important;
-// }
+.mb-3, .my-3 {
+    margin-bottom: 1rem!important;
+}
 
 .bg-gray-300 {
     background-color: #e2e8f0;
@@ -44,8 +45,4 @@
 }
 .shadow-none {
     box-shadow: none!important;
-}
-
-.instagaram{
-    color: fuchsia;
 }
