Se crea las tarjetas que muestran las caracteristicas del inmueble

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -26,3 +26,13 @@ body {
     display: block;
     margin: auto;
 }
+
+.card-max-width{
+    max-width: 600px;
+    margin: auto;
+    margin-top: 4rem;
+}
+
+.card-height{
+    height: 20px;
+}
