--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,6 +4,7 @@
 @import "./profileAgent.scss";
 @import "./userProfile.scss";
 @import "./findAgent.scss";
+@import "./formLogin.scss";
 @import "./search.scss";
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css");
