--- a/src/styles/userProfile.scss
+++ b/src/styles/userProfile.scss
@@ -1,4 +1,9 @@
-
+.profile-body{
+    background-image:url("../img/cities_tall.jpg");
+    background-size: cover;
+    height: 116vh;
+    
+}
 .main-body {
     padding: 15px;
 }
@@ -43,6 +48,11 @@
 }
 .h-100 {
     height: 100%!important;
+}
+.h-50{
+    height: 60%;
+    border-radius: .25rem;
+
 }
 .shadow-none {
     box-shadow: none!important;
