Se agrega los agentes a la busqueda

--- a/src/styles/findAgent.scss
+++ b/src/styles/findAgent.scss
@@ -5,6 +5,13 @@
     height: 100vh;
 }
 
+.agent-body{
+    background-image:url("../img/cities_tall.jpg");
+    background-size: cover;
+    height: 116vh;
+    
+}
+
 .findAgent-Title{
     color: white;
 }
